Bug 317708 - cairo renderer leaks memory and uses uninitialised variables with text in SVG.  Patch by longsonr@gmail.com, r=tor, sr=jst